Fix: z-index and issues around click-ability of elements

--- a/style.css
+++ b/style.css
@@ -19,18 +19,15 @@ list-view {
   left: 0px;
   position: absolute;
   right: 0px;
-/*   z-index: -2; */
+  /*z-index: 1000;*/
 }
 
 #errorDiv {
-  padding-top: 50%;
+  margin-left: 25%;
   text-align: center;
-  /*margin: auto;*/
-  color: #f0560b;
-  /*older browsers will stick with the PNG that they understand, while newer browsers will load the SVG:*/
-  background: url("images/noMap.png") no-repeat center;
+  /*background: url("images/noMap.png") no-repeat center;
   background-image: url("images/noMap.svg");
-  background-size: contain;
+  background-size: contain;*/
 }
 
 input {
@@ -45,13 +42,13 @@ input {
 
 #list-view {
   /*position: fixed;*/
-  top: 20px;
+  top: 100px;
   right: 20px;
   width: 100%;
   background-color: #fff;
   margin: 0;
   padding: 0;
-  z-index: 1000;
+  /*z-index: 110;*/
 }
 
 h1 {
@@ -73,33 +70,40 @@ li {
 }
 
 #toggleList {
+  background-color: #fff;
+height: 30px;
+width: 100px;
+padding-top: 7.5px;
+margin-bottom: 20px;
+text-align: center;
 visibility: visible;
 /*position: fixed;*/
-z-index: 1;
+/*z-index: 1000;*/
 }
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 300px) {
   #toggleList {
   visibility: visible;
   /*position: fixed;*/
-  z-index: 1;
+  /*z-index: 0;*/
   }
+
 }
 
 
 #wrapper {
     display: table-row;
     padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
     background: 000;
 }
-
+/*
 #wrapper.toggled {
     padding-left: 250px;
-}
+}*/
 
 #sidebar-wrapper {
     display:table-cell;
@@ -111,10 +115,10 @@ z-index: 1;
     margin-left: -250px;
     overflow-y: auto;
     background: #fff;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
 }
 
 #wrapper.toggled #sidebar-wrapper {
